{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 158,
  "lineage": "9da7c261-ade4-4fbc-050b-224a749ac60b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335321184:loadbalancer/app/FCJ-alb/2b859cf5a4e82783",
            "arn_suffix": "app/FCJ-alb/2b859cf5a4e82783",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "FCJ-alb-739843685.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:730335321184:loadbalancer/app/FCJ-alb/2b859cf5a4e82783",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "FCJ-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cfe38a83b5ca8e57"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0199033ec648ac08d"
              },
              {
                "subnet_id": "subnet-089e3b3afda6d3b1f"
              }
            ],
            "subnets": [
              "subnet-0199033ec648ac08d",
              "subnet-089e3b3afda6d3b1f"
            ],
            "tags": {
              "Author": "DUKE",
              "Name": "Doan-application-lb",
              "Type": "Application Load Balancer"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "Doan-application-lb",
              "Type": "Application Load Balancer"
            },
            "vpc_id": "vpc-04a1412e61c187c5b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_subnet.public_subnet_1",
            "module.infrastructure_vpc.aws_subnet.public_subnet_2",
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335321184:listener/app/FCJ-alb/2b859cf5a4e82783/8760fa574530f9c6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335321184:targetgroup/my-tg/ddc4e13b57c2ace0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:730335321184:listener/app/FCJ-alb/2b859cf5a4e82783/8760fa574530f9c6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335321184:loadbalancer/app/FCJ-alb/2b859cf5a4e82783",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.application_load_balancer",
            "module.alb.aws_lb_target_group.target_group",
            "module.infrastructure_vpc.aws_subnet.public_subnet_1",
            "module.infrastructure_vpc.aws_subnet.public_subnet_2",
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335321184:targetgroup/my-tg/ddc4e13b57c2ace0",
            "arn_suffix": "targetgroup/my-tg/ddc4e13b57c2ace0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:730335321184:targetgroup/my-tg/ddc4e13b57c2ace0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:730335321184:loadbalancer/app/FCJ-alb/2b859cf5a4e82783"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Author": "DUKE",
              "Name": "Doan-target-group",
              "Type": "Target group for ALB"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "Doan-target-group",
              "Type": "Target group for ALB"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instances",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "server_test",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06650ca7ed78ff6fa",
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:instance/i-0c201cf109c3d25e6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c201cf109c3d25e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "FCJ-Lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea9c0f2961212be3",
            "private_dns": "ip-10-0-7-220.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.220",
            "public_dns": "ec2-47-129-39-83.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.129.39.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05c57838ceba25dba",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089e3b3afda6d3b1f",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-compute-server_test",
              "Type": "EC2"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-compute-server_test",
              "Type": "EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cfe38a83b5ca8e57"
            ]
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_subnet.public_subnet_1",
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07336a3844ab129fd",
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:elastic-ip/eipalloc-07336a3844ab129fd",
            "association_id": "eipassoc-07504677ca09063a8",
            "domain": "vpc",
            "id": "eipalloc-07336a3844ab129fd",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0cafdd7f5e91c4cf1",
            "private_dns": "ip-10-0-22-17.ap-southeast-1.compute.internal",
            "private_ip": "10.0.22.17",
            "public_dns": "ec2-52-77-49-46.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.49.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-nat-eip",
              "domain": "vpc"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-nat-eip",
              "domain": "vpc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:internet-gateway/igw-0f17c37ecfe6f7dbc",
            "id": "igw-0f17c37ecfe6f7dbc",
            "owner_id": "730335321184",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-igw",
              "Type": "Internet-Gateway"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-igw",
              "Type": "Internet-Gateway"
            },
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07336a3844ab129fd",
            "association_id": "eipassoc-07504677ca09063a8",
            "connectivity_type": "public",
            "id": "nat-0b19ed817506f0eb9",
            "network_interface_id": "eni-0cafdd7f5e91c4cf1",
            "private_ip": "10.0.22.17",
            "public_ip": "52.77.49.46",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0199033ec648ac08d",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-nat-gateway",
              "Type": "NAT-Gateway"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-nat-gateway",
              "Type": "NAT-Gateway"
            }
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_eip.nat_eip",
            "module.infrastructure_vpc.aws_subnet.public_subnet_2",
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:route-table/rtb-0e5d7b85475c3652e",
            "id": "rtb-0e5d7b85475c3652e",
            "owner_id": "730335321184",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-rtb-private",
              "Type": "Route-Table"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-rtb-private",
              "Type": "Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:route-table/rtb-0ebc56f2de0b4b88b",
            "id": "rtb-0ebc56f2de0b4b88b",
            "owner_id": "730335321184",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b19ed817506f0eb9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-rtb-private2",
              "Type": "Route-Table"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-rtb-private2",
              "Type": "Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_eip.nat_eip",
            "module.infrastructure_vpc.aws_nat_gateway.nat_gateway",
            "module.infrastructure_vpc.aws_subnet.public_subnet_2",
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_1",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:route-table/rtb-090c755ee34bf3164",
            "id": "rtb-090c755ee34bf3164",
            "owner_id": "730335321184",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f17c37ecfe6f7dbc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-rtb-public",
              "Type": "Route-Table"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-rtb-public",
              "Type": "Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_internet_gateway.igw",
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_1",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01eb6898d68d9acab",
            "route_table_id": "rtb-0e5d7b85475c3652e",
            "subnet_id": "subnet-037cbb044e26792cb"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_route_table.private_route_table_1",
            "module.infrastructure_vpc.aws_subnet.private_subnet_1",
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_2",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f35204d5b2eec19",
            "route_table_id": "rtb-0e5d7b85475c3652e",
            "subnet_id": "subnet-001e8edbf5b56cd47"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_route_table.private_route_table_1",
            "module.infrastructure_vpc.aws_subnet.private_subnet_2",
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_3",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01994dbbb95500a04",
            "route_table_id": "rtb-0ebc56f2de0b4b88b",
            "subnet_id": "subnet-0fc16765a2232a2df"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_eip.nat_eip",
            "module.infrastructure_vpc.aws_nat_gateway.nat_gateway",
            "module.infrastructure_vpc.aws_route_table.private_route_table_2",
            "module.infrastructure_vpc.aws_subnet.private_subnet_3",
            "module.infrastructure_vpc.aws_subnet.public_subnet_2",
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_4",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a78ed8fe8e03ff7",
            "route_table_id": "rtb-0ebc56f2de0b4b88b",
            "subnet_id": "subnet-0c078ac195d0f7ba7"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_eip.nat_eip",
            "module.infrastructure_vpc.aws_nat_gateway.nat_gateway",
            "module.infrastructure_vpc.aws_route_table.private_route_table_2",
            "module.infrastructure_vpc.aws_subnet.private_subnet_4",
            "module.infrastructure_vpc.aws_subnet.public_subnet_2",
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_1",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a0c6cd9c92ab7a6",
            "route_table_id": "rtb-090c755ee34bf3164",
            "subnet_id": "subnet-089e3b3afda6d3b1f"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_internet_gateway.igw",
            "module.infrastructure_vpc.aws_route_table.public_route_table_1",
            "module.infrastructure_vpc.aws_subnet.public_subnet_1",
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_2",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08232b4a863e8a501",
            "route_table_id": "rtb-090c755ee34bf3164",
            "subnet_id": "subnet-0199033ec648ac08d"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_internet_gateway.igw",
            "module.infrastructure_vpc.aws_route_table.public_route_table_1",
            "module.infrastructure_vpc.aws_subnet.public_subnet_2",
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:subnet/subnet-037cbb044e26792cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037cbb044e26792cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335321184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-private1-ap-southeast-1a",
              "Type": "Subnet"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-private1-ap-southeast-1a",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:subnet/subnet-001e8edbf5b56cd47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001e8edbf5b56cd47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335321184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-private2-ap-southeast-1b",
              "Type": "Subnet"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-private2-ap-southeast-1b",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:subnet/subnet-0fc16765a2232a2df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc16765a2232a2df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335321184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-private3-ap-southeast-1b",
              "Type": "Subnet"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-private3-ap-southeast-1b",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_4",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:subnet/subnet-0c078ac195d0f7ba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c078ac195d0f7ba7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335321184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-private4-ap-southeast-1b",
              "Type": "Subnet"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-private4-ap-southeast-1b",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:subnet/subnet-089e3b3afda6d3b1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089e3b3afda6d3b1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335321184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-public1-ap-southeast-1a",
              "Type": "Subnet"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-public1-ap-southeast-1a",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:subnet/subnet-0199033ec648ac08d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0199033ec648ac08d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335321184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-public2-ap-southeast-1b",
              "Type": "Subnet"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-subnet-public2-ap-southeast-1b",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "module.infrastructure_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:vpc/vpc-04a1412e61c187c5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e81738c36b0af835",
            "default_route_table_id": "rtb-09bdea834d5c92874",
            "default_security_group_id": "sg-00688d68c1a7fa163",
            "dhcp_options_id": "dopt-0295f65aa273deacf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a1412e61c187c5b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09bdea834d5c92874",
            "owner_id": "730335321184",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-vpc",
              "Type": "VPC"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-vpc",
              "Type": "VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group/sg-0f4c6e41baed1931d",
            "description": "Allow server access to database server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4c6e41baed1931d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d1d15f84db1aad0",
                  "sg-0cfe38a83b5ca8e57"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20241227145212891800000001",
            "name_prefix": "terraform-",
            "owner_id": "730335321184",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-db",
              "Type": "Security-Group-Outbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-db",
              "Type": "Security-Group-Outbound-Rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group/sg-04d1d15f84db1aad0",
            "description": "Allow access to public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d1d15f84db1aad0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0cfe38a83b5ca8e57"
                ],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20241227145213592500000002",
            "name_prefix": "terraform-",
            "owner_id": "730335321184",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-private",
              "Type": "Security-Group"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-private",
              "Type": "Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group/sg-0cfe38a83b5ca8e57",
            "description": "Allow access to server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfe38a83b5ca8e57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241227145213613700000003",
            "name_prefix": "terraform-",
            "owner_id": "730335321184",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public",
              "Type": "Security-Group"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public",
              "Type": "Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a1412e61c187c5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_sg_outbound",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-05dad0cb6a49de893",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05dad0cb6a49de893",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f4c6e41baed1931d",
            "security_group_rule_id": "sgr-05dad0cb6a49de893",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-db-outbound-rule",
              "Type": "Security-Group-Outbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-db-outbound-rule",
              "Type": "Security-Group-Outbound-Rule"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.db_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "private_sg_outbound",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-02b3926093614e17e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02b3926093614e17e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04d1d15f84db1aad0",
            "security_group_rule_id": "sgr-02b3926093614e17e",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-private-outbound-rule1",
              "Type": "Security-Group-Outbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-private-outbound-rule1",
              "Type": "Security-Group-Outbound-Rule"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.private_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "public_sg_outbound",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-059ace592702b5d6e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-059ace592702b5d6e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cfe38a83b5ca8e57",
            "security_group_rule_id": "sgr-059ace592702b5d6e",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public-outbound-rule1",
              "Type": "Security-Group-Outbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public-outbound-rule1",
              "Type": "Security-Group-Outbound-Rule"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_sg_inbound",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-041a6fb993c0cc2e7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-041a6fb993c0cc2e7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0cfe38a83b5ca8e57",
            "security_group_id": "sg-0f4c6e41baed1931d",
            "security_group_rule_id": "sgr-041a6fb993c0cc2e7",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-db-inbound-rule",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-db-inbound-rule",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.db_sg",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_sg_inbound2",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-062c3259cb7b416aa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-062c3259cb7b416aa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-04d1d15f84db1aad0",
            "security_group_id": "sg-0f4c6e41baed1931d",
            "security_group_rule_id": "sgr-062c3259cb7b416aa",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-db-inbound-rule",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-db-inbound-rule",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.db_sg",
            "module.security.aws_security_group.private_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "private_sg_inbound1",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-05d1b7e24a9f94c7e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05d1b7e24a9f94c7e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0cfe38a83b5ca8e57",
            "security_group_id": "sg-04d1d15f84db1aad0",
            "security_group_rule_id": "sgr-05d1b7e24a9f94c7e",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-private-inbound-rule",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-private-inbound-rule",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.private_sg",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "private_sg_inbound2",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-04892e31c60cb7199",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04892e31c60cb7199",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-04d1d15f84db1aad0",
            "security_group_id": "sg-04d1d15f84db1aad0",
            "security_group_rule_id": "sgr-04892e31c60cb7199",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-private-inbound-rule",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-private-inbound-rule",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.private_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_1",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-0a185ad1f3f71f227",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a185ad1f3f71f227",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cfe38a83b5ca8e57",
            "security_group_rule_id": "sgr-0a185ad1f3f71f227",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public-inbound-rule1",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public-inbound-rule1",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_2",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-03986f8afee1aba49",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03986f8afee1aba49",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cfe38a83b5ca8e57",
            "security_group_rule_id": "sgr-03986f8afee1aba49",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public-inbound-rule2",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public-inbound-rule2",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_3",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-0713cb2f3c650ee3e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0713cb2f3c650ee3e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cfe38a83b5ca8e57",
            "security_group_rule_id": "sgr-0713cb2f3c650ee3e",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public-inbound-rule3",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public-inbound-rule3",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_4",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335321184:security-group-rule/sgr-0fa8c062143373674",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0fa8c062143373674",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cfe38a83b5ca8e57",
            "security_group_rule_id": "sgr-0fa8c062143373674",
            "tags": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public-inbound-rule5",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DUKE",
              "Name": "FCJ-network-sg-public-inbound-rule5",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_vpc.aws_vpc.mainvpc",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    }
  ]
}